--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							</button>
 							
 						</div>
-						<div class="modal-body">
+						<div class="modal-body_warning center">
 							<p>
 								<span id="send-popup_text">
 									
